--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
      <div class="slide" id="s3">
          <center>
              <h1 class="no-whitespace">Severe Weather Likely</h1>
-             <img src="http://tornado.sfsu.edu/Geosciences/classes/e260/InclassExercises_Sp18/InclassExercise14_Sp2018/22UTCSounding.png" width="880px" height="601px" />
+             <img src="22UTCSounding.png" width="880px" height="601px" />
              <h2 class="no-whitespace">Skew-T Plot Just Before the Tornado</h2>
          </center>
      </div>
@@ -123,7 +123,7 @@
      <div class="slide" id="s4">
          <center>
              <h1 class="no-whitespace">The Supercells Merge</h1>
-             <img src="http://tornado.sfsu.edu/Geosciences/classes/e260/InclassExercises_Sp18/InclassExercise14_Sp2018/Joplin-Tornado-Satellite-Animation.gif" />
+             <img src="Joplin-Tornado-Satellite-Animation.gif" />
          </center>
      </div>
      
