--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
    </body>
    <script>
       window.addEventListener("load", function(e){
-         document.body.innerHTML += "<audio autoplay><source src='slide1.mp4' type='audio/mp4' /></audio>";
+         document.body.innerHTML += "<audio autoplay><source src='slide1.m4a' type='audio/mp4' /></audio>";
       });
    </script>
    <script>
