--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
        <title>SC425 Science Seminar Presentation: The Joplin Tornado</title>
        <meta charset="utf-8" />
+      <meta name="robots" content="no-index, no-follow" />
      <style>
        html, body{
          margin: 0px;
@@ -48,7 +49,7 @@
        }
      </style>
    </head>
-   <script>window.currentSlide = 1;</script>
+   <script>window.currentSlide = 0;</script>
    <noscript>
        <style>
            div.no-js{
@@ -62,10 +63,25 @@
    <body>
      <div class="no-js">
        <h1>Error</h1>
-       <p>This presentation requires JavaScript to handle changing slides. Please enable JavaScript to view the presentation. For more information, please contact <a href="mailto:lteeter@centralmethodist.edu">lteeter@centralmethodist.edu</a>.</p>
+       <p>This presentation requires JavaScript to handle changing slides. Please enable JavaScript to view the presentation. For more information, please contact me in the class discussion forum or at <a href="mailto:lteeter@centralmethodist.edu">lteeter@centralmethodist.edu</a>.</p>
      </div>
+      <!-- Quick Fix -->
+      <div class="slide" style="display: block;" id="s0">
+         <center>
+            <h1 class="no-whitespace">Viewing Notes</h1>
+            <ol>
+               <li>Left clicks advance slides.</li>
+               <li>Audio begins automatically after slide change.</li>
+               <li>Audio playback is terminated on slide change to avoid overlapping playback.</li>
+               <li>Returning to a previous slide is not supported.</li>
+               <li>The presentation should close automatically once you have reached the end.</li>
+               <li>Make sure you're using a HTML5 supported browser with JavaScript enabled to view the presensation!</li>
+               <li>In case of viewing issues, please contact in the class discussion forum or at <a href="mailto:lteeter@centralmethodist.edu">lteeter@centralmethodist.edu</a>.</li>
+            </ol>
+         </center>
+      </div>
      <!-- Intro Slide -->
-     <div class="slide" style="display: block;" id="s1">
+     <div class="slide" id="s1">
        <center>
          <h1 class="no-whitespace">The Joplin Tornado</h1>
          <img src="https://images.csmonitor.com/csmarchives/2011/05/MIDWEST_STORMS_14966583.JPG?alias=standard_900x600nc" style="padding-top: 1em;"/>
