--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
            div.slide{
                display: none !important;
            }
+          a{
+             color: aliceblue;
+          }
        </style>
    </noscript>
    <body>
@@ -69,15 +72,15 @@
       <div class="slide" style="display: block;" id="s0">
          <center>
             <h1 class="no-whitespace">Viewing Notes</h1>
-            <ol>
-               <li>Left clicks advance slides.</li>
-               <li>Audio begins automatically after slide change.</li>
-               <li>Audio playback is terminated on slide change to avoid overlapping playback.</li>
-               <li>Returning to a previous slide is not supported.</li>
-               <li>The presentation should close automatically once you have reached the end.</li>
-               <li>Make sure you're using a HTML5 supported browser with JavaScript enabled to view the presensation!</li>
-               <li>In case of viewing issues, please contact in the class discussion forum or at <a href="mailto:lteeter@centralmethodist.edu">lteeter@centralmethodist.edu</a>.</li>
-            </ol>
+            <pre>
+            Left click to advance to the next slide.
+            Audio begins automatically on each slide.
+            If the slide is changed before the audio playback is complete, the prior audio is terminated so no overlap occurs with the new slide's content.
+            Returning to a previous slide is not supported.
+            The presentation should close automatically once you have reached the end.
+            Make sure you're using a HTML5 supported browser with JavaScript enabled to view the presensation!
+            In case of viewing issues, please contact in the class discussion forum or at <a href="mailto:lteeter@centralmethodist.edu">lteeter@centralmethodist.edu</a>.
+            </pre>
          </center>
       </div>
      <!-- Intro Slide -->
